Changelog
=========

1.1.2 (unreleased)
------------------

- Nothing changed yet.


1.1.1 (2012-09-24)
------------------

- Do not raise an AssertionError if the objects type is not ShopItem.
  [Julian Infanger]


1.1 (2011-12-27)
----------------

- Made ShopItem inherit from ATCTContent instead of ATDocument.

- Avoid creating a session if there doesn't exist one yet.
  Accessing REQUEST.SESSION causes a _ZopeID cookie to be created, therefore
  we use the browser_id_manager to check first if a session already exists.

- Removed language specific subjects for order mails from settings and handle
  translation with i18n.


1.0 (2011-02-25)
----------------

- Initial release.